--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,36 @@
-# OSX
-#
+# macOS
 .DS_Store
 
+# Node
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Expo
+.expo/
+dist/
+web-build/
+
+# Metro
+.metro-health-check*
+
+# debug
+npm-debug.*
+yarn-debug.*
+yarn-error.*
+
+# macOS
+.DS_Store
+*.pem
+
+# local env files
+.env*.local
+
+# typescript
+*.tsbuildinfo
+
 # Xcode
-#
-build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -20,55 +46,59 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-**/.xcode.env.local
+project.xcworkspace
 
-# Android/IntelliJ
-#
-build/
-.idea
-.gradle
-local.properties
+# Android
+/android/app/build/
+/android/build/
+/android/captures/
+/android/local.properties
+/android/keystores/release.keystore
 *.iml
-*.hprof
-.cxx/
-*.keystore
-!debug.keystore
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
 
-# node.js
-#
-node_modules/
-npm-debug.log
-yarn-error.log
+# Jest
+coverage/
 
-# fastlane
-#
-# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
-# screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/
+# Logs
+logs
+*.log
 
-**/fastlane/report.xml
-**/fastlane/Preview.html
-**/fastlane/screenshots
-**/fastlane/test_output
+# Runtime data
+pids
+*.pid
+*.seed
 
-# Bundle artifact
-*.jsbundle
+# Optional npm cache directory
+.npm
 
-# Ruby / CocoaPods
-**/Pods/
-/vendor/bundle/
+# Optional eslint cache
+.eslintcache
 
-# Temporary files created by Metro to check the health of the file watcher
-.metro-health-check*
+# Optional REPL history
+.node_repl_history
 
-# testing
-/coverage
+# Output of 'npm pack'
+*.tgz
 
-# Yarn
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Ignore Android build and debug files
+android/app/.cxx/
+android/app/build/
+android/.gradle/
