--- a/package.json
+++ b/package.json
@@ -1,39 +1,64 @@
 {
-  "name": "BlockhouseAuth",
-  "version": "0.0.1",
+  "name": "blockhouseauth",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-native": "0.77.0"
+    "@react-native/gradle-plugin": "^0.77.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.5",
+    "formik": "^2.4.2",
+    "react": "18.2.0",
+    "react-native": "^0.77.0",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-safe-area-context": "^4.14.1",
+    "react-native-screens": "^4.5.0",
+    "react-native-svg": "^15.11.1",
+    "react-redux": "^8.1.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "15.0.1",
-    "@react-native-community/cli-platform-android": "15.0.1",
-    "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.77.0",
-    "@react-native/eslint-config": "0.77.0",
-    "@react-native/metro-config": "0.77.0",
-    "@react-native/typescript-config": "0.77.0",
-    "@types/jest": "^29.5.13",
-    "@types/react": "^18.2.6",
+    "@babel/core": "^7.26.7",
+    "@babel/eslint-parser": "^7.26.5",
+    "@babel/plugin-proposal-decorators": "^7.25.9",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.26.7",
+    "@react-native-community/cli": "^15.1.3",
+    "@react-native/babel-preset": "^0.77.0",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.9",
+    "@react-native/typescript-config": "^0.77.0",
+    "@tsconfig/react-native": "^3.0.0",
+    "@types/react": "^18.3.18",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4"
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-config-react-native": "^4.1.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react-native": "^5.0.0",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.76.5",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-test-renderer": "18.2.0"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=16"
+  },
+  "jest": {
+    "preset": "react-native",
+    "setupFiles": [
+      "./node_modules/react-native-gesture-handler/jestSetup.js"
+    ]
   }
 }
