--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-native/metro-config": "^0.72.9",
     "@react-native/typescript-config": "^0.77.0",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.18",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.0.0",
